--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,15 +1,15 @@
-<%= render 'admin/shared/heading', name: 'ჟანრის რედაქტირება' %>
+<%= render 'admin/shared/heading', name: t('admin.edit_genre') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <%= render('admin/shared/form',
-               url: admin_genre_path,
+               url: admin_genre_path(locale: I18n.locale),
                method: :put,
                record: @genre,
-               back_url: admin_genres_path,
+               back_url: admin_genres_path(locale: I18n.locale),
                delete_url: ->(record){ admin_genre_path(record) }
               ) %>
 
-    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ ჟანრის წაშლა?', modal_text: 'ეს ჟანრი წაიშლება სრულად' %>
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: t('delete_genre_modal.title'), modal_text: t('delete_genre_modal.text') %>
   </div>
-<main>
+</main>
