--- a/app/views/admin/shared/table/_filter.html.erb
+++ b/app/views/admin/shared/table/_filter.html.erb
@@ -12,7 +12,7 @@
               </svg>
             </div>
             <div class="inline-flex">
-              ძიება
+              <%= t('buttons.search') %>
             </div>
           </button>
         <% else %>
