--- a/app/views/admin/translators/new.html.erb
+++ b/app/views/admin/translators/new.html.erb
@@ -1,12 +1,12 @@
-<%= render 'admin/shared/heading', name: 'მთარგმნელის დამატება' %>
+<%= render 'admin/shared/heading', name: t('add_new_translator') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <%= render('admin/shared/form',
-               url: admin_translators_path,
+               url: admin_translators_path(locale: I18n.locale),
                method: :post,
                record: @translator,
                back_url: admin_translators_path
               ) %>
   </div>
-<main>
+</main>
