--- a/app/views/text_blocks/advanced_search.html.erb
+++ b/app/views/text_blocks/advanced_search.html.erb
@@ -2,7 +2,7 @@
 
   <div class="max-w-screen-2xl mx-auto justify-items-stretch" style="display: grid; gap: 2rem; grid-auto-columns: 350px auto; grid-auto-rows: auto auto">
     <div id="search-form-div" class="mt-4 flex" style="grid-row-start: 1; grid-row-end: 3; position: relative">
-      <%= form_for @search, url: advanced_search_text_blocks_path, method: :get do |form| %>
+      <%= form_for @search, url: advanced_search_text_blocks_path(locale: I18n.locale), method: :get do |form| %>
         <div style="position: sticky; top: 16%; left: 3%">
           <div id='isVisible' class="py-4 px-4 flex grid grid-flow-row justify-items-stretch space-y-4 bg-stone-200" style="height: 80dvh; overflow-y:scroll;">
             <button id='dropdown-arrow' style="display: flex; justify-content: right;" data-controller="dropdown" data-action="click->dropdown#showOrHide">
@@ -17,7 +17,7 @@
                   <%= form.check_box :termin, name: :termin %>
                 </div>
                 <div class="inline-flex">
-                  მხოლოდ ტერმინოლოგია
+                  <%= t('advanced_search.only_terminology') %>
                 </div>
               </div>
             </div>
@@ -27,14 +27,14 @@
                   <%= form.check_box :exact_match, name: :exact_match, data: { action: "your-controller-name#toggleExactMatch" } %>
                 </div>
                 <div class="inline-flex">
-                  ზუსტი დამთხვევა
+                  <%= t('advanced_search.exact_match') %>
                 </div>
               </div>
             </div>
             <div class="inline-flex">
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div class="inline-flex">
-                  ორიგინალის ენა
+                  <%= t('advanced_search.original_language') %>
                 </div>
                 <div class="inline-flex">
                   <div class="flex grid grid-flow-col space-x-2 items-center">
@@ -42,19 +42,19 @@
                       <%= form.radio_button :original_language, :ka, name: :original_language %>
                     </div>
                     <div class="inline-flex">
-                      <%= form.label :original_language_ka, 'ქართული' %>
+                      <%= form.label :original_language_ka, t('advanced_search.georgian') %>
                     </div>
                     <div class="inline-flex">
                       <%= form.radio_button :original_language, :en, name: :original_language %>
                     </div>
                     <div class="inline-flex">
-                      <%= form.label :original_language_en, 'ინგლისური' %>
+                      <%= form.label :original_language_en, t('advanced_search.english') %>
                     </div>
                     <div class="inline-flex">
                       <%= form.radio_button :original_language, :both, name: :original_language, checked: "checked" %>
                     </div>
                     <div class="inline-flex">
-                      <%= form.label :original_language_both, 'ორივე' %>
+                      <%= form.label :original_language_both, t('advanced_search.both') %>
                     </div>
                   </div>
                 </div>
@@ -63,13 +63,13 @@
             <div>
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div>
-                  ქვეკორპუსები
+                  <%= t('advanced_search.sub_corpora') %>
                 </div>
                 <div>
                   <%= form.collection_select :supergroup_ids,
                                              Supergroup.ordered,
                                              :id,
-                                             :name_ka,
+                                             "name_#{I18n.locale}".to_sym,
                                              { selected: @search.search_text_block_pair&.dig(:supergroup_ids) },
                                              {
                                                multiple: true,
@@ -82,13 +82,13 @@
             <div>
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div>
-                  ჯგუფები
+                  <%= t('advanced_search.groups') %>
                 </div>
                 <div>
                   <%= form.collection_select :group_ids,
                                              Group.where(supergroup_id: @search.search_text_block_pair&.dig(:supergroup_ids)).ordered,
                                              :id,
-                                             :name_ka,
+                                             "name_#{I18n.locale}".to_sym,
                                              { selected: @search.search_text_block_pair&.dig(:group_ids) },
                                              {
                                                multiple: true,
@@ -101,13 +101,13 @@
             <div>
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div>
-                  კრებულები
+                  <%= t('advanced_search.collections') %>
                 </div>
                 <div>
                   <%= form.collection_select :collection_ids,
                                              Collection.where(group_id: @search.search_text_block_pair&.dig(:group_ids)).ordered,
                                              :id,
-                                             :name_ka,
+                                             "name_#{I18n.locale}".to_sym,
                                              { selected: @search.search_text_block_pair&.dig(:collection_ids) },
                                              {
                                                multiple: true,
@@ -120,13 +120,13 @@
             <div>
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div>
-                  ტიპები
+                  <%= t('advanced_search.types') %>
                 </div>
                 <div>
                   <%= form.collection_select :type_ids,
                                              Type.ordered,
                                              :id,
-                                             :name_ka,
+                                             "name_#{I18n.locale}".to_sym,
                                              { selected: @search.search_text_block_pair&.dig(:type_ids) },
                                              { multiple: true, data: { controller: 'multi-select' } } %>
                 </div>
@@ -135,13 +135,13 @@
             <div>
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div>
-                  ჟანრები
+                  <%= t('advanced_search.genres') %>
                 </div>
                 <div>
                   <%= form.collection_select :genre_ids,
                                              Genre.ordered,
                                              :id,
-                                             :name_ka,
+                                             "name_#{I18n.locale}".to_sym,
                                              { selected: @search.search_text_block_pair&.dig(:genre_ids) },
                                              { multiple: true, data: { controller: 'multi-select' } } %>
                 </div>
@@ -150,13 +150,13 @@
             <div>
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div>
-                  დარგები
+                  <%= t('advanced_search.fields') %>
                 </div>
                 <div>
                   <%= form.collection_select :field_ids,
                                              Field.ordered,
                                              :id,
-                                             :name_ka,
+                                             "name_#{I18n.locale}".to_sym,
                                              { selected: @search.search_text_block_pair&.dig(:field_ids) },
                                              { multiple: true, data: { controller: 'multi-select' } } %>
                 </div>
@@ -165,13 +165,13 @@
             <div>
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div>
-                  ავტორები
+                  <%= t('advanced_search.authors') %>
                 </div>
                 <div>
                   <%= form.collection_select :author_ids,
                                              Author.ordered,
                                              :id,
-                                             :name_ka,
+                                             "name_#{I18n.locale}".to_sym,
                                              { selected: @search.search_text_block_pair&.dig(:author_ids) },
                                              { multiple: true, data: { controller: 'multi-select' } } %>
                 </div>
@@ -180,13 +180,13 @@
             <div>
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div>
-                  მთარგმნელები
+                  <%= t('advanced_search.translators') %>
                 </div>
                 <div>
                   <%= form.collection_select :translator_ids,
                                              Translator.ordered,
                                              :id,
-                                             :name_ka,
+                                             "name_#{I18n.locale}".to_sym,
                                              { selected: @search.search_text_block_pair&.dig(:translator_ids) },
                                              { multiple: true, data: { controller: 'multi-select' } } %>
                 </div>
@@ -195,13 +195,13 @@
             <div>
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div>
-                  გამომცემლობები
+                  <%= t('advanced_search.publishers') %>
                 </div>
                 <div>
                   <%= form.collection_select :publishing_ids,
                                              Publishing.ordered,
                                              :id,
-                                             :name_ka,
+                                             "name_#{I18n.locale}".to_sym,
                                              { selected: @search.search_text_block_pair&.dig(:publishing_ids) },
                                              { multiple: true, data: { controller: 'multi-select' } } %>
                 </div>
@@ -210,14 +210,14 @@
             <div class="inline-flex">
               <div class="flex grid grid-flow-row space-y-2 items-center">
                 <div class="inline-flex">
-                  გამოცემულია
+                  <%= t('advanced_search.published') %>
                 </div>
                 <div class="inline-flex">
                   <div class="flex grid grid-flow-col items-center space-x-2 justify-between">
                     <div class="inline-flex">
                       <div class="flex grid grid-flow-row space-y-2 items-center">
                         <div class="inline-flex">
-                          წლიდან
+                          <%= t('advanced_search.from_year') %>
                         </div>
                         <div class="inline-flex">
                           <%= form.text_field :year_start, name: :year_start, class: "max-w-[80px] border-stone-400 focus:ring-oceanside-500 focus:border-oceanside-500" %>
@@ -227,7 +227,7 @@
                     <div class="inline-flex">
                       <div class="flex grid grid-flow-row space-y-2 items-center">
                         <div class="inline-flex">
-                          წლამდე
+                          <%= t('advanced_search.to_year') %>
                         </div>
                         <div class="inline-flex">
                           <%= form.text_field :year_end, name: :year_end, class: "max-w-[80px] border-stone-400 focus:ring-oceanside-500 focus:border-oceanside-500" %>
@@ -237,14 +237,14 @@
                   </div>
                 </div>
                 <div class="inline-flex">
-                  თარგმნილია
+                  <%= t('advanced_search.translated') %>
                 </div>
                 <div class="inline-flex mb-4">
                   <div class="flex grid grid-flow-col items-center space-x-2 justify-between">
                     <div class="inline-flex mb-4">
                       <div class="flex grid grid-flow-row space-y-2 items-center">
                         <div class="inline-flex">
-                          წლიდან
+                          <%= t('advanced_search.from_year') %>
                         </div>
                         <div class="inline-flex">
                           <%= form.text_field :translation_year_start, name: :translation_year_start, class: "max-w-[80px] border-stone-400 focus:ring-oceanside-500 focus:border-oceanside-500" %>
@@ -254,7 +254,7 @@
                     <div class="inline-flex mb-4">
                       <div class="flex grid grid-flow-row space-y-2 items-center">
                         <div class="inline-flex">
-                          წლამდე
+                          <%= t('advanced_search.to_year') %>
                         </div>
                         <div class="inline-flex">
                           <%= form.text_field :translation_year_end, name: :translation_year_end, class: "max-w-[80px] border-stone-400 focus:ring-oceanside-500 focus:border-oceanside-500" %>
@@ -272,7 +272,7 @@
                 </svg>
               </div>
               <div>
-                ძიება
+                <%= t('buttons.search') %>
               </div>
             </button>
           </div>
@@ -280,7 +280,7 @@
       <% end %>
     </div>
     <div id="total-count-div" class="top-40 py-4 inline-flex text-gray-400 text-sm items-center bg-gray-100" style="grid-column: 2;">
-      <%= @text_block_pairs.total_count %> შედეგი
+      <%= @text_block_pairs.total_count %> <%= t('advanced_search.results') %>
     </div>
     <div id="search-result-div" class="flex" style="grid-column-start: 2; grid-column-end: 3; grid-row: 2;">
 
