--- a/app/views/text_blocks/search.html.erb
+++ b/app/views/text_blocks/search.html.erb
@@ -4,7 +4,7 @@
       <%= render 'shared/search_bar' %>
     </div>
     <div class="inline-flex text-gray-400 text-sm items-center">
-      <%= @text_block_pairs.total_count %> შედეგი
+      <%= @text_block_pairs.total_count %> <%= t('advanced_search.results') %>
     </div>
   </div>
 
