--- a/app/views/users/invitations/edit.html.erb
+++ b/app/views/users/invitations/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="flex justify-center">
       <%= render 'shared/logo_md' %>
     </div>
-    <h2 class="mt-6 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">დააყენეთ პაროლი</h2>
+    <h2 class="mt-6 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"><%= t('users.set_password') %></h2>
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-[480px]">
@@ -14,14 +14,14 @@
 
         <% if f.object.class.require_password_on_accepting %>
           <div>
-            <label for="password" class="block text-sm font-medium leading-6 text-gray-900">პაროლი</label>
+            <label for="password" class="block text-sm font-medium leading-6 text-gray-900"><%= t('users.password') %></label>
             <div class="mt-2">
               <%= f.password_field :password, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-oceanside-500 sm:text-sm sm:leading-6" %>
             </div>
           </div>
 
           <div>
-            <label for="password_confirmation" class="block text-sm font-medium leading-6 text-gray-900">გაიმეორეთ პაროლი</label>
+            <label for="password_confirmation" class="block text-sm font-medium leading-6 text-gray-900"><%= t('users.repeat_password') %></label>
             <div class="mt-2">
               <%= f.password_field :password_confirmation, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-oceanside-500 sm:text-sm sm:leading-6" %>
             </div>
@@ -29,7 +29,7 @@
         <% end %>
 
         <div class="mt-4">
-          <%= f.submit 'დააყენეთ პაროლი', class: "flex w-full justify-center rounded-md bg-mountbatten-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500" %>
+          <%= f.submit t('users.set_password'), class: "flex w-full justify-center rounded-md bg-mountbatten-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500" %>
         </div>
       <% end %>
     </div>
