--- a/app/views/admin/authors/index.html.erb
+++ b/app/views/admin/authors/index.html.erb
@@ -1,27 +1,27 @@
-<%= render 'admin/shared/heading', name: 'ავტორები' %>
+<%= render 'admin/shared/heading', name: t('admin.authors') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <% crumbs = [] %>
-    <% crumbs << { name: 'ავტორები', url: admin_authors_path } %>
+    <% crumbs << { name: t('admin.authors'), url: admin_authors_path(locale: I18n.locale) } %>
 
     <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
 
-    <%= render 'admin/shared/new_button', name: 'ახალი ავტორის დამატება', url: new_admin_author_path %>
+    <%= render 'admin/shared/new_button', name: t('admin.add_new_author'), url: new_admin_author_path(locale: I18n.locale) %>
 
-    <%= render 'admin/shared/paging', records: @authors, url_method: -> (**params){ admin_authors_path(**params) }, paging_params: {}.merge(@search.attributes) %>
+    <%= render 'admin/shared/paging', records: @authors, url_method: -> (**params){ admin_authors_path(**params.merge(locale: I18n.locale)) }, paging_params: {}.merge(@search.attributes) %>
     <div class="px-4 sm:px-6 lg:px-8">
       <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
           <div data-controller="search-highlight" class="inline-block min-w-full py-2 align-middle">
-            <%= form_for @search, url: admin_authors_path, method: :get do |form| %>
+            <%= form_for @search, url: admin_authors_path(locale: I18n.locale), method: :get do |form| %>
               <table class="w-full border-separate border-spacing-0 border-gray-300">
                 <thead>
 
                   <%= render 'admin/shared/table/header',
                              columns: [{ name: 'UID' },
-                                       { name: 'სახელი და გვარი ქართულად', classes: 'max-w-[240px]' },
-                                       { name: 'სახელი და გვარი ინგლისურად', classes: 'max-w-[240px]' },
+                                       { name: t('table.georgian_name_and_surname'), classes: 'max-w-[240px]' },
+                                       { name: t('table.english_name_and_surname'), classes: 'max-w-[240px]' },
                                        { name: '' }] %>
 
                   <%= render 'admin/shared/table/filter',
@@ -39,12 +39,12 @@
                                record: author,
                                index: index,
                                columns: { uid: true,
-                                          edit_url_method: -> (**params){ edit_admin_author_path(**params) },
+                                          edit_url_method: -> (**params){ edit_admin_author_path(**params.merge(locale: I18n.locale)) },
                                           edit_url_params: { id: author.id },
                                           delete_url_method: -> (record){ admin_author_path(record) },
-                                          delete_redirect_url_method: admin_authors_path,
-                                          delete_modal_title: 'გსურთ ავტორის წაშლა?',
-                                          delete_modal_text: 'ეს ავტორი წაიშლება სრულად',
+                                          delete_redirect_url_method: admin_authors_path(locale: I18n.locale),
+                                          delete_modal_title: t('delete_author_modal.title'),
+                                          delete_modal_text: t('delete_author_modal.text'),
                                           name_ka: true,
                                           name_en: true,
                                           edit: true,
@@ -58,9 +58,9 @@
         </div>
       </div>
     </div>
-    <%= render 'admin/shared/paging', records: @authors, url_method: -> (**params){ admin_authors_path(**params) }, paging_params: {}.merge(@search.attributes) %>
+    <%= render 'admin/shared/paging', records: @authors, url_method: -> (**params){ admin_authors_path(**params.merge(locale: I18n.locale)) }, paging_params: {}.merge(@search.attributes) %>
 
-    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ ავტორის წაშლა?',
-                                                      modal_text: 'ეს ავტორი წაიშლება სრულად' %>
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: t('delete_author_modal.title'),
+                                                      modal_text: t('delete_author_modal.text') %>
   </div>
 </main>
