--- a/app/views/admin/collections/shared/_form.html.erb
+++ b/app/views/admin/collections/shared/_form.html.erb
@@ -5,13 +5,13 @@
   <div class="mt-8 flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl rounded-t-md ring-2 ring-mountbatten-500">
     <div class="bg-mountbatten-100 px-3 col-span-1 rounded-tl-md space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :supergroup_id, 'ქვეკორპუსი', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :supergroup_id, t('admin.form.sub_corpora'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-mountbatten-100 px-3 rounded-tr-md col-span-2 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3 w-full">
         <div class="mt-2 sm:mt-0 w-full">
-          <%= form.collection_select :supergroup_id, Supergroup.all, :id, :name_ka, { selected: @collection.group&.supergroup_id, inlcude_blank: true }, { disabled: true, class: "bg-gray-50 border border-mountbatten-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" } %>
+          <%= form.collection_select :supergroup_id, Supergroup.all, :id, "name_#{I18n.locale}".to_sym, { selected: @collection.group&.supergroup_id, inlcude_blank: true }, { disabled: true, class: "bg-gray-50 border border-mountbatten-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" } %>
         </div>
       </div>
     </div>
@@ -20,7 +20,7 @@
   <div class="mt-0.5 flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl ring-2 ring-mountbatten-500">
     <div class="bg-mountbatten-100 px-3 col-span-1 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :group_id, 'ჯგუფი', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :group_id, t('admin.form.group'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-mountbatten-100 px-3 col-span-2 space-y-12 sm:space-y-16 inline-flex">
@@ -29,10 +29,10 @@
           <%= form.collection_select :group_id,
                                      Group.ordered,
                                      :id,
-                                     :name_ka,
+                                     "name_#{I18n.locale}".to_sym,
                                      { selected: @collection.group&.id, inlcude_blank: true },
                                      { required: true, data: { controller: 'multi-select' } } %>
-          <!-- <%= form.collection_select :group_id, Group.all, :id, :name_ka, { selected: @collection.group&.id, inlcude_blank: true }, { required: true, class: "bg-gray-50 border border-mountbatten-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" } %> -->
+          <!-- <%= form.collection_select :group_id, Group.all, :id, "name_#{I18n.locale}".to_sym, { selected: @collection.group&.id, inlcude_blank: true }, { required: true, class: "bg-gray-50 border border-mountbatten-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" } %> -->
         </div>
       </div>
     </div>
@@ -41,7 +41,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :name_ka, 'სახელი (ka)', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :name_ka, t('admin.form.name_ka'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -56,7 +56,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :name_en, 'სახელი (en)', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :name_en, t('admin.form.name_en'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -71,7 +71,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :author_ids, 'ავტორები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :author_ids, t('admin.form.authors'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -80,7 +80,7 @@
           <%= form.collection_select :author_ids,
                                      Author.ordered,
                                      :id,
-                                     :name_ka,
+                                     "name_#{I18n.locale}".to_sym,
                                      { selected: @collection.author_ids, inlcude_blank: true },
                                      { multiple: true, data: { controller: 'multi-select' } } %>
         </div>
@@ -91,7 +91,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :translator_ids, 'მთარგმნელები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :translator_ids, t('admin.form.translators'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -100,7 +100,7 @@
           <%= form.collection_select :translator_ids,
                                      Translator.ordered,
                                      :id,
-                                     :name_ka,
+                                     "name_#{I18n.locale}".to_sym,
                                      { selected: @collection.translator_ids, inlcude_blank: true },
                                      { multiple: true, data: { controller: 'multi-select' } } %>
         </div>
@@ -111,7 +111,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :type_ids, 'ტიპები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :type_ids, t('admin.form.types'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -120,7 +120,7 @@
           <%= form.collection_select :type_ids,
                                      Type.ordered,
                                      :id,
-                                     :name_ka,
+                                     "name_#{I18n.locale}".to_sym,
                                      { selected: @collection.type_ids, inlcude_blank: true },
                                      { multiple: true, data: { controller: 'multi-select' } } %>
         </div>
@@ -131,7 +131,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :field_ids, 'დარგები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :field_ids, t('admin.form.fields'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -140,7 +140,7 @@
           <%= form.collection_select :field_ids,
                                      Field.ordered,
                                      :id,
-                                     :name_ka,
+                                     "name_#{I18n.locale}".to_sym,
                                      { selected: @collection.field_ids, inlcude_blank: true },
                                      { multiple: true, data: { controller: 'multi-select' } } %>
         </div>
@@ -151,7 +151,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :genre_ids, 'ჟანრები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :genre_ids, t('admin.form.genres'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -160,7 +160,7 @@
           <%= form.collection_select :genre_ids,
                                      Genre.ordered,
                                      :id,
-                                     :name_ka,
+                                     "name_#{I18n.locale}".to_sym,
                                      { selected: @collection.genre_ids, inlcude_blank: true },
                                      { multiple: true, data: { controller: 'multi-select' } } %>
         </div>
@@ -171,7 +171,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :publishing_ids, 'გამომცემლობები', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :publishing_ids, t('admin.form.publishings'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -180,7 +180,7 @@
           <%= form.collection_select :publishing_ids,
                                      Publishing.ordered,
                                      :id,
-                                     :name_ka,
+                                     "name_#{I18n.locale}".to_sym,
                                      { selected: @collection.publishing_ids, inlcude_blank: true },
                                      { multiple: true, data: { controller: 'multi-select' } } %>
         </div>
@@ -191,7 +191,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :year, 'გამოცემის წელი', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :year, t('admin.form.year_published'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -206,7 +206,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :translation_year, 'თარგმნის წელი', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :translation_year, t('admin.form.year_translated'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -221,7 +221,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 rounded-bl-md ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :original_language, 'ორიგინალის ენა', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :original_language, t('admin.form.original_language'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 rounded-br-md col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -236,7 +236,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :comment, 'კომენტარი', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :comment, t('admin.form.comment'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -251,7 +251,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 rounded-bl-md ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :status, 'სტატუსი', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :status, t('admin.form.status'), class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 rounded-br-md col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -266,7 +266,7 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 rounded-bl-md ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :should_unsync, 'სინქრონიზება', class: "block text-sm font-medium leading-6 #{@collection.group.should_sync? ? 'text-gray-900' : 'text-gray-500'} sm:py-1.5" %>
+        <%= form.label :should_unsync, t('admin.form.should_sync'), class: "block text-sm font-medium leading-6 #{@collection.group.should_sync? ? 'text-gray-900' : 'text-gray-500'} sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 rounded-br-md col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
@@ -279,18 +279,17 @@
   </div>
 
   <div class="mt-6 flex justify-stretch grid grid-flow-col gap-x-6 max-w-3xl">
-    <%= link_to 'უკან დაბრუნება', admin_collections_path(group_id: (@collection.persisted? ? @collection.group.id : @group&.id)), type: "button", class: "inline-flex justify-center rounded-md bg-gray-200 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-200" %>
-    <!-- <button type="button" class="inline-flex justify-center rounded-md bg-gray-200 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-200">უარყოფა</button> -->
+    <%= link_to t('admin.form.back'), admin_collections_path(locale: I18n.locale, group_id: (@collection.persisted? ? @collection.group.id : @group&.id)), type: "button", class: "inline-flex justify-center rounded-md bg-gray-200 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-gray-700 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-200" %>
     <% if (current_user.admin? || current_user.superadmin?) && @collection.persisted? %>
       <button type="button"
               data-controller="delete-record"
               data-delete-record-url-value="<%= admin_collection_path(@collection) %>"
-              data-delete-record-redirect-url-value="<%= admin_collections_path(group_id: @collection.group.id) %>"
+              data-delete-record-redirect-url-value="<%= admin_collections_path(locale: I18n.locale, group_id: @collection.group.id) %>"
               data-action="click->delete-record#submit"
               class="inline-flex justify-center rounded-md bg-gray-500 ring-2 ring-gray-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-gray-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-500">
-        წაშლა
+        <%= t('admin.form.delete') %>
       </button>
     <% end %>
-    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
+    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500"><%= t('admin.form.submit') %></button>
   </div>
 <% end %>
