--- a/app/views/admin/genres/new.html.erb
+++ b/app/views/admin/genres/new.html.erb
@@ -1,12 +1,12 @@
-<%= render 'admin/shared/heading', name: 'ჟანრის დამატება' %>
+<%= render 'admin/shared/heading', name: t('admin.genres') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <%= render('admin/shared/form',
-               url: admin_genres_path,
+               url: admin_genres_path(locale: I18n.locale),
                method: :post,
                record: @genre,
-               back_url: admin_genres_path
+               back_url: admin_genres_path(locale: I18n.locale)
               ) %>
   </div>
-<main>
+</main>
