--- a/app/views/admin/groups/edit.html.erb
+++ b/app/views/admin/groups/edit.html.erb
@@ -1,17 +1,17 @@
-<%= render 'admin/shared/heading', name: 'ჯგუფის რედაქტირება' %>
+<%= render 'admin/shared/heading', name: t('admin.edit_group') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
 
     <% crumbs = [] %>
-    <% crumbs << { name: @group.supergroup.name_ka, url: admin_groups_path(supergroup_id: @group.supergroup.id) } %>
-    <% crumbs << { name: @group.name_ka, url: admin_collections_path(group_id: @group.id) } %>
-    <% crumbs << { name: 'რედაქტირება', url: edit_admin_group_path(group_id: @group.id) } %>
+    <% crumbs << { name: @group.supergroup.send("name_#{I18n.locale}"), url: admin_groups_path(locale: I18n.locale, supergroup_id: @group.supergroup.id) } %>
+    <% crumbs << { name: @group.send("name_#{I18n.locale}"), url: admin_collections_path(locale: I18n.locale, group_id: @group.id) } %>
+    <% crumbs << { name: t('crumbs.edit'), url: edit_admin_group_path(locale: I18n.locale, group_id: @group.id) } %>
 
     <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
 
-    <%= render 'admin/groups/shared/form', url: admin_group_path, method: :put %>
+    <%= render 'admin/groups/shared/form', url: admin_group_path(locale: I18n.locale), method: :put %>
 
-    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ ჯგუფის წაშლა?', modal_text: 'ჯგუფი წაიშლება სრულად' %>
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: t('delete_group_modal.title'), modal_text: t('delete_group_modal.text') %>
   </div>
-<main>
+</main>
