--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -13,24 +13,24 @@
       <div class="flex">
         <div class="grid grid-flow-col grid-cols-4">
           <div class="col-span-1 inline-flex items-center">
-            <%= link_to admin_supergroups_path do %>
+            <%= link_to admin_supergroups_path(locale: I18n.locale) do %>
               <%= render 'shared/logo_md' %>
             <% end %>
           </div>
           <div class="col-span-3 flex justify-center items-center">
             <div class="ml-4">
-              <%= link_to admin_supergroups_path do %>
-                <h1 class="text-xl font-thin leading-tight tracking-tight text-gray-900">ინგლისურ-ქართული</h1>
-                <h1 class="text-xl font-thin leading-tight tracking-tight text-gray-900">პარალელური კორპუსი</h1>
+              <%= link_to admin_supergroups_path(locale: I18n.locale) do %>
+                <h1 class="text-xl font-thin leading-tight tracking-tight text-gray-900"><%= t('header.english_georgian') %></h1>
+                <h1 class="text-xl font-thin leading-tight tracking-tight text-gray-900"><%= t('header.parallel_corpus') %></h1>
               <% end %>
             </div>
           </div>
         </div>
       </div>
       <div class="flex justify-center items-center">
-        <%= link_to admin_supergroups_path do %>
+        <%= link_to admin_supergroups_path(locale: (I18n.available_locales - [I18n.locale])&.first) do %>
           <div class="p-2 border-2 border-transparent hover:border-gray-50">
-            <h2 class="text-l font-thin leading-tight tracking-tight text-gray-900 hover:border-1">EN</h2>
+            <h2 class="text-l font-thin leading-tight tracking-tight text-gray-900 hover:border-1"><%= t('other_language') %></h2>
           </div>
         <% end %>
       </div>
@@ -41,10 +41,10 @@
       <div class="flex">
         <div class="hidden sm:-my-px sm:flex sm:space-x-8">
           <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
-          <%= header_link('ქვეკორპუსები', admin_supergroups_path) %>
-          <%= header_link('ჯგუფები', admin_groups_path) %>
-          <%= header_link('კრებულები', admin_collections_path) %>
-          <%= header_link('ტექსტური წყვილები', admin_text_blocks_path) %>
+          <%= header_link(t('crumbs.sub_corpora'), admin_supergroups_path(locale: I18n.locale)) %>
+          <%= header_link(t('crumbs.groups'), admin_groups_path(locale: I18n.locale)) %>
+          <%= header_link(t('crumbs.collections'), admin_collections_path(locale: I18n.locale)) %>
+          <%= header_link(t('crumbs.text_pairs'), admin_text_blocks_path(locale: I18n.locale)) %>
         </div>
       </div>
       <div class="flex">
@@ -59,17 +59,17 @@
               <div role="none">
                 <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
                 <!-- <a href="#" class="text-gray-700 group flex items-center px-4 py-2 text-sm" role="menuitem" tabindex="-1" id="menu-item-0"> -->
-                <%= link_to 'ავტორები', admin_authors_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-0" %>
-                <%= link_to 'მთარგმნელები', admin_translators_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-1" %>
-                <%= link_to 'ტიპები', admin_types_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-2" %>
-                <%= link_to 'ჟანრები', admin_genres_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-3" %>
-                <%= link_to 'დარგები', admin_fields_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-4" %>
-                <%= link_to 'გამომცემლობები', admin_publishings_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-5" %>
+                <%= link_to t('admin.authors'), admin_authors_path(locale: I18n.locale), class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-0" %>
+                <%= link_to t('admin.translators'), admin_translators_path(locale: I18n.locale), class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-1" %>
+                <%= link_to t('admin.types'), admin_types_path(locale: I18n.locale), class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-2" %>
+                <%= link_to t('admin.genres'), admin_genres_path(locale: I18n.locale), class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-3" %>
+                <%= link_to t('admin.fields'), admin_fields_path(locale: I18n.locale), class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-4" %>
+                <%= link_to t('admin.publishings'), admin_publishing_index_path(locale: I18n.locale), class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-5" %>
                 <!-- </a> -->
               </div>
               <% if current_user.superadmin? %>
                 <div class="border-t border-gray-100" role="none">
-                  <%= link_to 'მომხმარებლები', admin_users_path, class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-0" %>
+                  <%= link_to t('admin.users'), admin_users_path(locale: I18n.locale), class: "text-gray-700 group flex items-center px-4 py-2 text-sm hover:bg-gray-50 hover:text-gray-900", role: "menuitem", tabindex: '-1', id: "menu-item-0" %>
                 </div>
               <% end %>
             </div>
@@ -81,11 +81,11 @@
                 class="relative inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-mountbatten-500 focus:ring-offset-2" aria-controls="mobile-menu" aria-expanded="false">
         <!-- <div class="hidden sm:-my-px sm:flex sm:space-x-8"> -->
           <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
-          <%= link_to destroy_user_session_path, 'data-turbo-method': :delete do %>
+          <%= link_to destroy_user_session_path(locale: I18n.locale), 'data-turbo-method': :delete do %>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9" />
             </svg>
-            <%= render 'admin/shared/tooltip', text: "შესული ხართ როგორც #{current_user.email}" %>
+            <%= render 'admin/shared/tooltip', text: t('admin.logged_in_as', user: current_user.email) %>
           <% end %>
         <!-- </div> -->
         </button>
