--- a/app/views/admin/shared/_paging.html.erb
+++ b/app/views/admin/shared/_paging.html.erb
@@ -1,23 +1,23 @@
 <div class="flex items-center justify-between border-gray-200 bg-white py-3">
   <div class="flex flex-1 justify-between sm:hidden">
-    <%= link_to 'წინა', url_method.call(**paging_params.merge(page: records.prev_page)), class: "relative inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50" %>
-    <%= link_to 'შემდეგი', url_method.call(**paging_params.merge(page: records.next_page)), class: "relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50" %>
+    <%= link_to t('advanced_search.previous'), url_method.call(**paging_params.merge(page: records.prev_page)), class: "relative inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50" %>
+    <%= link_to t('advanced_search.previous'), url_method.call(**paging_params.merge(page: records.next_page)), class: "relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50" %>
   </div>
   <div class="hidden sm:flex sm:flex-1 sm:items-center sm:justify-between">
     <div>
       <p class="text-sm text-gray-700">
-        ნაჩვენებია
+        <%= t('advanced_search.displayed') %>
         <span class="font-medium">
           <%= (records.current_page - 1) * records.limit_value + 1 %>
         </span>
         -
         <span class="font-medium">
           <%= [records.current_page * records.limit_value, records.total_count].min %>
-        </span> ჩანაწერი
+        </span> <%= t('advanced_search.records') %>
         <span class="font-medium">
           <%= records.total_count %>
         </span>
-        შედეგიდან
+        <%= t('advanced_search.from_records') %>
       </p>
     </div>
     <div>
