--- a/app/views/admin/supergroups/index.html.erb
+++ b/app/views/admin/supergroups/index.html.erb
@@ -1,27 +1,27 @@
-<%= render 'admin/shared/heading', name: 'ქვეკორპუსები' %>
+<%= render 'admin/shared/heading', name: t('admin.sub_corpora') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
 
-    <%= render 'admin/shared/new_button', name: 'ახალი ქვეკორპუსის დამატება', url: new_admin_supergroup_path %>
+    <%= render 'admin/shared/new_button', name: t('admin.add_new_sub_corpora'), url: new_admin_supergroup_path(locale: I18n.locale) %>
 
-    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {}.merge(@search.attributes) %>
+    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params.merge(locale: I18n.locale)) }, paging_params: {}.merge(@search.attributes) %>
     <div class="px-4 sm:px-6 lg:px-8">
       <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
           <div data-controller="search-highlight" class="inline-block min-w-full py-2 align-middle">
-            <%= form_for @search, url: admin_supergroups_path, method: :get do |form| %>
+            <%= form_for @search, url: admin_supergroups_path(locale: I18n.locale), method: :get do |form| %>
               <table class="w-full border-separate border-spacing-0 border-gray-300">
                 <thead>
 
                   <%= render 'admin/shared/table/header',
                              columns: [{ name: 'UID' },
-                                       { name: 'დასახელება ქართულად', classes: 'max-w-[240px]' },
-                                       { name: 'დასახელება ინგლისურად', classes: 'max-w-[240px]' },
-                                       { name: 'სტატუსი', classes: 'max-w-[100px]' },
-                                       { name: 'ჯგუფები', classes: 'max-w-[100px]' },
-                                       { name: 'კრებულები', classes: 'max-w-[100px]' },
-                                       { name: 'წყვილები', classes: 'max-w-[100px]' },
+                                       { name: t('table.georgian_name'), classes: 'max-w-[240px]' },
+                                       { name: t('table.english_name'), classes: 'max-w-[240px]' },
+                                       { name: t('table.status'), classes: 'max-w-[100px]' },
+                                       { name: t('table.groups'), classes: 'max-w-[100px]' },
+                                       { name: t('table.collections'), classes: 'max-w-[100px]' },
+                                       { name: t('table.pairs'), classes: 'max-w-[100px]' },
                                        { name: '', classes: 'max-w-[100px]' }] %>
 
                   <%= render 'admin/shared/table/filter',
@@ -43,10 +43,10 @@
                                record: supergroup,
                                index: index,
                                columns: { uid: true,
-                                          enter_url_method: -> (**params){ admin_groups_path(**params) },
-                                          enter_url_params: { supergroup_id: supergroup.id },
-                                          edit_url_method: -> (**params){ edit_admin_supergroup_path(**params) },
-                                          edit_url_params: { id: supergroup.id },
+                                          enter_url_method: -> (**params){ admin_groups_path(**params.merge(locale: I18n.locale)) },
+                                          enter_url_params: {  supergroup_id: supergroup.id },
+                                          edit_url_method: -> (**params){ edit_admin_supergroup_path(**params.merge(locale: I18n.locale)) },
+                                          edit_url_params: {  id: supergroup.id },
                                           name_ka: true,
                                           name_en: true,
                                           status: true,
@@ -64,6 +64,6 @@
         </div>
       </div>
     </div>
-    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params) }, paging_params: {}.merge(@search.attributes) %>
+    <%= render 'admin/shared/paging', records: @supergroups, url_method: -> (**params){ admin_supergroups_path(**params.merge(locale: I18n.locale)) }, paging_params: {}.merge(@search.attributes) %>
   </div>
 </main>
