--- a/app/views/admin/text_blocks/_edit_card.html.erb
+++ b/app/views/admin/text_blocks/_edit_card.html.erb
@@ -23,7 +23,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M 6 7 l 0 -2 m 0 0 l 12 0 m 0 0 l 0 2 M 12 5 l 0 14 m -2 0 l 4 0"/>
                 </svg>
-                <%= render 'admin/shared/tooltip', text: 'ტერმინის მონიშვნა' %>
+                <%= render 'admin/shared/tooltip', text: t('admin.select_as_term') %>
               </div>
               <div
                 data-action="click->text-block#split"
@@ -34,7 +34,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664"/>
                 </svg>
-                <%= render 'admin/shared/tooltip', text: 'ბლოკის ორად გაყოფა' %>
+                <%= render 'admin/shared/tooltip', text: t('admin.split_block_in_two') %>
               </div>
               <button type="button"
                       id="delete-button-<%= block&.id || new_id %>"
@@ -47,7 +47,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"/>
                 </svg>
-                <%= render 'admin/shared/tooltip', text: 'ბლოკის წაშლა' %>
+                <%= render 'admin/shared/tooltip', text: t('admin.delete_block') %>
               </button>
             </div>
           </div>
@@ -74,7 +74,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M 17.25 8.25 L 21 12 m 0 0 l -3.75 3.75 M 17 12 C 9 12 15 6 7 6 M 17 12 C 9 12 15 18 7 18 M 21 12 L 17 12 M 7 6 L 3 6 M 7 18 L 3 18"/>
           </svg>
-          <%= render 'admin/shared/tooltip', text: 'ზედა და ქვედა ბლოკის ერთში გაერთიანება' %>
+          <%= render 'admin/shared/tooltip', text: t('admin.merge_blocks') %>
         </button>
         <button type="button"
                 data-controller="swap-blocks tooltip"
@@ -85,7 +85,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5"/>
           </svg>
-          <%= render 'admin/shared/tooltip', text: 'ზედა და ქვედა ბლოკის ადგილების გაცვლა' %>
+          <%= render 'admin/shared/tooltip', text: t('admin.exchange_blocks') %>
         </button>
         <button type="button"
                 data-controller="add-block tooltip"
@@ -97,7 +97,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15"/>
           </svg>
-          <%= render 'admin/shared/tooltip', text: 'ახალი ბლოკის დამატება' %>
+          <%= render 'admin/shared/tooltip', text: t('admin.add_new_block') %>
         </button>
       </div>
     </div>
