--- a/app/views/admin/types/index.html.erb
+++ b/app/views/admin/types/index.html.erb
@@ -1,27 +1,27 @@
-<%= render 'admin/shared/heading', name: 'ტიპები' %>
+<%= render 'admin/shared/heading', name: t('admin.types') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <% crumbs = [] %>
-    <% crumbs << { name: 'ტიპები', url: admin_types_path } %>
+    <% crumbs << { name: t('admin.types'), url: admin_types_path(locale: I18n.locale) } %>
 
     <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
 
-    <%= render 'admin/shared/new_button', name: 'ახალი ტიპის დამატება', url: new_admin_type_path %>
+    <%= render 'admin/shared/new_button', name: t('admin.add_new_type'), url: new_admin_type_path(locale: I18n.locale) %>
 
-    <%= render 'admin/shared/paging', records: @types, url_method: -> (**params){ admin_types_path(**params) }, paging_params: {}.merge(@search.attributes) %>
+    <%= render 'admin/shared/paging', records: @types, url_method: -> (**params){ admin_types_path(**params.merge(locale: I18n.locale)) }, paging_params: {}.merge(@search.attributes) %>
     <div class="px-4 sm:px-6 lg:px-8">
       <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
           <div data-controller="search-highlight" class="inline-block min-w-full py-2 align-middle">
-            <%= form_for @search, url: admin_types_path, method: :get do |form| %>
+            <%= form_for @search, url: admin_types_path(locale: I18n.locale), method: :get do |form| %>
               <table class="w-full border-separate border-spacing-0 border-gray-300">
                 <thead>
 
                   <%= render 'admin/shared/table/header',
                              columns: [{ name: 'UID' },
-                                       { name: 'დასახელება ქართულად', classes: 'max-w-[240px]' },
-                                       { name: 'დასახელება ინგლისურად', classes: 'max-w-[240px]' },
+                                       { name: t('table.georgian_name'), classes: 'max-w-[240px]' },
+                                       { name: t('table.english_name'), classes: 'max-w-[240px]' },
                                        { name: '' }] %>
 
                   <%= render 'admin/shared/table/filter',
@@ -39,12 +39,12 @@
                                record: type,
                                index: index,
                                columns: { uid: true,
-                                          edit_url_method: -> (**params){ edit_admin_type_path(**params) },
+                                          edit_url_method: -> (**params){ edit_admin_type_path(**params.merge(locale: I18n.locale)) },
                                           edit_url_params: { id: type.id },
                                           delete_url_method: -> (record){ admin_type_path(record) },
-                                          delete_redirect_url_method: admin_types_path,
-                                          delete_modal_title: 'გსურთ ტიპის წაშლა?',
-                                          delete_modal_text: 'ეს ტიპი წაიშლება სრულად',
+                                          delete_redirect_url_method: admin_types_path(locale: I18n.locale),
+                                          delete_modal_title: t('delete_type_modal.title'),
+                                          delete_modal_text: t('delete_type_modal.text'),
                                           name_ka: true,
                                           name_en: true,
                                           edit: true,
@@ -58,9 +58,9 @@
         </div>
       </div>
     </div>
-    <%= render 'admin/shared/paging', records: @types, url_method: -> (**params){ admin_types_path(**params) }, paging_params: {}.merge(@search.attributes) %>
+    <%= render 'admin/shared/paging', records: @types, url_method: -> (**params){ admin_types_path(**params.merge(locale: I18n.locale)) }, paging_params: {}.merge(@search.attributes) %>
 
-    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ ტიპის წაშლა?',
-                                                      modal_text: 'ეს ტიპი წაიშლება სრულად' %>
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: t('delete_type_modal.title'),
+                                                      modal_text: t('delete_type_modal.text') %>
   </div>
 </main>
