--- a/app/views/admin/types/new.html.erb
+++ b/app/views/admin/types/new.html.erb
@@ -1,12 +1,12 @@
-<%= render 'admin/shared/heading', name: 'ტიპის დამატება' %>
+<%= render 'admin/shared/heading', name: t('admin.add_new_type') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <%= render('admin/shared/form',
-               url: admin_types_path,
+               url: admin_types_path(locale: I18n.locale),
                method: :post,
                record: @type,
                back_url: admin_types_path
               ) %>
   </div>
-<main>
+</main>
