--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,16 +1,16 @@
-<%= render 'admin/shared/heading', name: 'მომხმარებლის რედაქტირება' %>
+<%= render 'admin/shared/heading', name: t('admin.edit_user') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
 
     <% crumbs = [] %>
     <% crumbs << { name: @user.email } %>
-    <% crumbs << { name: 'რედაქტირება', url: edit_admin_user_path(user_id: @user.id) } %>
+    <% crumbs << { name: t('crumbs.edit'), url: edit_admin_user_path(locale: I18n.locale, user_id: @user.id) } %>
 
     <%= render 'admin/shared/breadcrumbs', crumbs: crumbs %>
 
-    <%= render 'admin/users/shared/form', url: admin_user_path, method: :put %>
+    <%= render 'admin/users/shared/form', url: admin_user_path(locale: I18n.locale), method: :put %>
 
-    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ მომხმარებლის წაშლა?', modal_text: 'მომხმარებელი წაიშლება სრულად' %>
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: t('delete_user_modal.title'), modal_text: t('delete_user_modal.text') %>
   </div>
-<main>
+</main>
