--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,25 +1,25 @@
-<%= render 'admin/shared/heading', name: 'მომხმარებლები' %>
+<%= render 'admin/shared/heading', name: t('admin.users') %>
 
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <% if current_user.superadmin? %>
-      <%= render 'admin/shared/new_button', name: 'ახალი მომხმარებლის დამატება', url: new_user_invitation_path %>
+      <%= render 'admin/shared/new_button', name: t('admin.add_new_user'), url: new_user_invitation_path(locale: I18n.locale) %>
     <% end %>
 
-    <%= render 'admin/shared/paging', records: @users, url_method: -> (**params){ admin_users_path(**params) }, paging_params: {}.merge(@search.attributes) %>
+    <%= render 'admin/shared/paging', records: @users, url_method: -> (**params){ admin_users_path(**params.merge(locale: I18n.locale)) }, paging_params: {}.merge(@search.attributes) %>
     <div class="px-4 sm:px-6 lg:px-8">
       <div class="flow-root">
         <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
           <div data-controller="search-highlight" class="inline-block min-w-full py-2 align-middle">
-            <%= form_for @search, url: admin_users_path, method: :get do |form| %>
+            <%= form_for @search, url: admin_users_path(locale: I18n.locale), method: :get do |form| %>
               <table class="w-full border-separate border-spacing-0 border-gray-300">
                 <thead>
 
                   <%= render 'admin/shared/table/header',
                              columns: [{ name: 'UID' },
-                                       { name: 'იმეილი', classes: 'max-w-[240px]' },
-                                       { name: 'როლი', classes: 'max-w-[240px]' },
-                                       { name: 'სტატუსი', classes: 'max-w-[240px]' },
+                                       { name: t('admin.email'), classes: 'max-w-[240px]' },
+                                       { name: t('admin.role'), classes: 'max-w-[240px]' },
+                                       { name: t('admin.status'), classes: 'max-w-[240px]' },
                                        { name: '' }] %>
 
                   <%= render 'admin/shared/table/filter',
@@ -38,12 +38,12 @@
                                record: user,
                                index: index,
                                columns: { uid: true,
-                                          edit_url_method: -> (**params){ edit_admin_user_path(**params) },
+                                          edit_url_method: -> (**params){ edit_admin_user_path(**params.merge(locale: I18n.locale)) },
                                           edit_url_params: { id: user.id },
                                           delete_url_method: -> (record){ admin_user_path(record) },
-                                          delete_redirect_url_method: admin_users_path,
-                                          delete_modal_title: 'გსურთ მომხმარებლის წაშლა?',
-                                          delete_modal_text: 'ეს მომხმარებელი წაიშლება სრულად',
+                                          delete_redirect_url_method: admin_users_path(locale: I18n.locale),
+                                          delete_modal_title: t('delete_user_modal.title'),
+                                          delete_modal_text: t('delete_user_modal.text'),
                                           email: true,
                                           role: true,
                                           status: true,
@@ -58,9 +58,9 @@
         </div>
       </div>
     </div>
-    <%= render 'admin/shared/paging', records: @users, url_method: -> (**params){ admin_users_path(**params) }, paging_params: {}.merge(@search.attributes) %>
+    <%= render 'admin/shared/paging', records: @users, url_method: -> (**params){ admin_users_path(**params.merge(locale: I18n.locale)) }, paging_params: {}.merge(@search.attributes) %>
 
-    <%= render 'admin/shared/confirm_delete_modal', modal_title: 'გსურთ მომხმარებლის წაშლა?',
-                                                      modal_text: 'ეს მომხმარებელი წაიშლება სრულად' %>
+    <%= render 'admin/shared/confirm_delete_modal', modal_title: t('delete_user_modal.title'),
+                                                      modal_text: t('delete_user_modal.text') %>
   </div>
 </main>
