--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,7 +3,7 @@
     <div class="flex justify-center">
       <%= render 'shared/logo_md' %>
     </div>
-    <h2 class="mt-6 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">პაროლი დაგავიწყდათ?</h2>
+    <h2 class="mt-6 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"><%= t('buttons.forgot_password') %></h2>
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-[480px]">
@@ -12,14 +12,14 @@
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div>
-          <label for="email" class="block text-sm font-medium leading-6 text-gray-900">იმეილი</label>
+          <label for="email" class="block text-sm font-medium leading-6 text-gray-900"><%= t('sessions.email') %></label>
           <div class="mt-2">
             <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-oceanside-500 sm:text-sm sm:leading-6" %>
           </div>
         </div>
 
         <div class="mt-4">
-          <%= f.submit "გამომიგზავნე პაროლის აღდგენის ინსტრუქცია", class: "flex w-full justify-center rounded-md bg-mountbatten-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500" %>
+          <%= f.submit t('buttons.send_me_password_reset_instruction'), class: "flex w-full justify-center rounded-md bg-mountbatten-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500" %>
         </div>
       <% end %>
 
