--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,37 +1,37 @@
 <%- if controller_name != 'sessions' %>
   <div class="mt-2 text-sm leading-6">
-    <%= link_to "შესვლა", new_session_path(resource_name), class: "font-semibold text-mountbatten-700 hover:text-mountbatten-500" %>
+    <%= link_to t('buttons.log_in'), new_session_path(resource_name), class: "font-semibold text-mountbatten-700 hover:text-mountbatten-500" %>
   </div>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <div class="mt-2 text-sm leading-6">
-    <%= link_to "დარეგისტრირება", new_registration_path(resource_name), class: "font-semibold text-mountbatten-700 hover:text-mountbatten-500" %>
+    <%= link_to t('buttons.sign_up'), new_registration_path(resource_name), class: "font-semibold text-mountbatten-700 hover:text-mountbatten-500" %>
   </div>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <div class="mt-2 text-sm leading-6">
-    <%= link_to "დაგავიწყდა პაროლი?", new_password_path(resource_name) %>
+    <%= link_to t('buttons.forgot_password'), new_password_path(resource_name) %>
   </div>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <div class="mt-2 text-sm leading-6">
-    <%= link_to "არ მიგიღია დადასტურების ინსტრუქცია?", new_confirmation_path(resource_name) %>
+    <%= link_to t('buttons.have_not_received_confirmation_instruction'), new_confirmation_path(resource_name) %>
   </div>
 <% end %>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
   <div class="mt-2 text-sm leading-6">
-    <%= link_to "არ მიგიღია განბლოკვის ინსტრუქცია?", new_unlock_path(resource_name) %>
+    <%= link_to t('buttons.have_not_received_unlock_instruction'), new_unlock_path(resource_name) %>
   </div>
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <div class="mt-2 text-sm leading-6">
-      <%= button_to "შესვლა #{OmniAuth::Utils.camelize(provider)}თი", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %>
+      <%= button_to t('buttons.log_in_with', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider), data: { turbo: false } %>
     </div>
   <% end %>
 <% end %>
