--- a/app/views/users/mailer/invitation_instructions.html.erb
+++ b/app/views/users/mailer/invitation_instructions.html.erb
@@ -1,11 +1,11 @@
-<p><%= "გამარჯობა #{@resource.email}" %></p>
+<p><%= t('invitation_email.greeting', email: @resource.email ) %></p>
 
-<p><%= "ვიღაცამ მოგიწვიათ #{root_url}-იდან. შეგიძლიათ დათანხმდეთ ქვემოთ მოცემული ბმულით." %></p>
+<p><%= t('invitation_email.p1', root_url: root_url) %></p>
 
-<p><%= link_to "დათანხმდით შემოთავაზებას", accept_invitation_url(@resource, invitation_token: @token) %></p>
+<p><%= link_to t('invitation_email.link'), accept_invitation_url(@resource, invitation_token: @token) %></p>
 
 <% if @resource.invitation_due_at %>
   <p><%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %></p>
 <% end %>
 
-<p><%= "თუ არ გინდათ მოწვევაზე დათახმება, უბრალოდ არ მიაქციუთ ყურადღება ამ იმეილს, თქვენი ანგარიში არ შეიქმნება თქვენი თანხმობის გარეშე." %></p>
+<p><%= t('invitation_email.p2') %></p>
